# hpc-coding-conventions

./: .bbp-project.yaml  .clang-format  .git-blame-ignore-revs  .gitignore  AUTHORS.txt  LICENSE  LICENSE.txt  README.md  bbp-project.yaml  code-formatting.md.jinja
.ci/: check_cmake_format.sh  check_code_formatting.sh  check_python_flake8.sh  check_python_format.sh
.github/workflows/: check_cmake_format.yml  check_code_formatting.yml  check_python_flake8.yml  check_python_format.yml  check_python_test.yml
code-formatting/: AlignAfterOpenBracket.cpp  AlignConsecutiveAssignments.cpp  AlignConsecutiveDeclarations.cpp  AlignTrailingComments.cpp  AllowAllParametersOfDeclarationOnNextLine.cpp  AllowShortBlocksOnASingleLine.cpp  AllowShortCaseLabelsOnASingleLine.cpp  AllowShortIfStatementsOnASingleLine.cpp
cpp/: .clang-format  .clang-format-10  .clang-format-11  .clang-format-9  .clang-tidy  .cmake-format.yaml  CMakeLists.txt  Documentation.md  Makefile  NamingConventions.md  Process.md  README.md  Tooling.md  clang-format-11  clang-format-13  clang-format-14  clang-format-15  cmake-format.yaml  code-formatting.py  lib.py
cpp/cmake/: 3rdparty.cmake  FindCMakeFormat.cmake  FindClangFormat.cmake  FindClangTidy.cmake  FindPreCommit.cmake  bbp-clang-format.py  bbp-clang-tidy.py  bbp-cmake-format.py  bbp-diff-filter.py  bbp-find-python-module.cmake  bbp-setup-pre-commit-config.py  bob.cmake  build-time-copy.cmake  cpplib.py  git-push-message.cmake.in  runClangFormat.cmake  sanitizers.cmake
cpp/documentation/: README.md
cpp/formatting/: .clang-format  .gitignore  Makefile  README  README.md  README.md.jinja  formatting.md.jinja  formatting.py
cpp/formatting/snippets/: AccessModifierOffset.cpp  AlignAfterOpenBracket.cpp  AlignArrayOfStructures.cpp  AlignEscapedNewlinesLeft.cpp  AlignOperands.cpp  AlignTrailingComments.cpp  AllowAllParametersOfDeclarationOnNextLine.cpp  AllowAllParametersOfDeclarationOnNextLine.cpp.skip  AllowShortBlocksOnASingleLine.cpp  AllowShortCaseLabelsOnASingleLine.cpp  AllowShortFunctionsOnASingleLine.cpp  AllowShortIfStatementsOnASingleLine.cpp  AllowShortLoopsOnASingleLine.cpp  AlwaysBreakTemplateDeclarations.cpp  BraceWrapping.BeforeCatch.cpp  BreakBeforeConceptDeclarations.cpp  EmptyLineBeforeAccessModifier.cpp  IndentPPDirectives.cpp  IndentRequires.cpp  LambdaBodyIndentation.cpp  NamespaceIndentation.cpp  PackConstructorInitializers.cpp  QualifierAlignment.cpp  RequiresClausePosition.cpp  SeparateDefinitionBlocks.cpp
cpp/snippets/: AlignOperands.cpp  AllowShortLoopsOnASingleLine.cpp  AlwaysBreakBeforeMultilineStrings.cpp
dev/: bump  repositories.yaml  test_lib.py
